# VENN

./: .gitignore
01_Gateway_Node/: CMakeLists.txt  binding.gyp  index.js  package-lock.json  package.json
01_Gateway_Node/account/: profile_info.js
01_Gateway_Node/account_info/: fyers_connect.js  profile.info.js  profile_info.js
01_Gateway_Node/bridge/: shm-bridge.cpp
01_Gateway_Node/connections/: fyers_connect.js
01_Gateway_Node/data_models/: option-symbol.model.js
01_Gateway_Node/data_streams/: stock.stream.js
01_Gateway_Node/helpers/: 12hrTime.js  DynamicSymbolArray.js  apiRateLimiter.js  bufferLayouts.js  ensureAndMkdir.helper.js  ensureAndRead.helper.js  tbtSocketManager.js
01_Gateway_Node/market/: marketStatus.js
01_Gateway_Node/streams/: depth.stream.js  stock.stream.js
01_Gateway_Node/streams/api-streams/: option-chain.stream.js
01_Gateway_Node/streams/depth-stream/: optionSymbols.depth.js
01_Gateway_Node/streams/sockets/indics/: nifty.socket.js  nifty50-option-chain.stream.js
02_Strategies_Python/: example.py
03_Core_Cpp/: example.cpp  warning.txt
03_Core_Cpp/headers/: bufferHeader.h
03_Core_Cpp/importers/: sampleStruct.cpp
Config/: ecosystem.config.js  launcher.js
Data/cache/: access_token.txt  auth_code.txt
